--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,19 @@
   <meta charset="utf-8">
   <title>AroundTheWorld</title>
   <base href="/">
+  
+  <!-- Bootratp 4 -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Animate css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+
+  <!-- Custom Theme Style -->
+  <link href="assets/vendors/css/custom.css" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <link rel="icon" type="image/x-icon" href="..\assets\images\logo.png"> 
+
 </head>
 <body>
   <app-root></app-root>
