Sing in and Forgott Password done

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
   <!-- Bootratp 4 -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Fontawesome -->
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
   <!-- Animate css -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <link href="assets/vendors/animate.css" rel="stylesheet">
 
   <!-- Custom Theme Style -->
   <link href="assets/vendors/css/custom.css" rel="stylesheet">
