--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,13 @@
   <!-- Custom Theme Style -->
   <link href="assets/vendors/css/custom.css" rel="stylesheet">
 
+  <!-- Maps -->
+  <script src="https://www.amcharts.com/lib/3/ammap.js"></script>
+  <script src="https://www.amcharts.com/lib/3/maps/js/worldLow.js"></script>
+  <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+  <script type="text/javascript" src="https://www.amcharts.com/lib/3/plugins/export/export.js"></script>
+  <link rel="stylesheet" href='https://www.amcharts.com/lib/3/plugins/export/export.css' type='text/css' media='all'/>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="icon" type="image/x-icon" href="..\assets\images\logo.png"> 
 
