Gallery mode added. And bugs ficed

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,14 @@
   <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
   <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
 
-
   <script src="https://www.amcharts.com/lib/3/serial.js"></script>
 
+  <!-- SLICK -->
 
-
-
+  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
+  <script src="https://unpkg.com/slick-carousel@1.6.0/slick/slick.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="icon" type="image/x-icon" href="..\assets\images\logo.png"> 
